--- a/src/components/Movies/Movies.css
+++ b/src/components/Movies/Movies.css
@@ -3,15 +3,49 @@
     min-height: calc(100vh - 176px);
     margin:  0 auto;
 }
+.more-btn-container {
+    width: calc(100% - 2 * 70px);
+    min-height: 166px;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.more-btn {
+    width: 320px;
+    height: 36px;
+    background-color: #F9F9F9;
+    border-radius: 7px;
+    border: 1px solid #F9F9F9;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 15px;
+}
 
 @media screen and (max-width: 1279px) {
     .movies__content {
         max-width: 768px;
+    }
+    .more-btn-container {
+        width: calc(100% - 2 * 30px);
+        margin: 0 auto;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
 }
 
 @media screen and (max-width:767px) {
     .movies__content {
         max-width: 320px;
+    }
+    .more-btn-container {
+        width: calc(100% - 2 * 10px);
+        margin-bottom: 80px;
+    }
+
+    .more-btn {
+        width: 240px;
     }
 }
