--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -47,6 +47,25 @@ margin: 0;
   line-height: 18px;
   color: #A0A0A0;
 }
+.movies-card__btn {
+    background-image: url(../../images/save6.svg);
+    margin: 0;
+    margin-bottom: 18px;
+    margin-top: 18px;
+    padding: 0;
+    width: 100px;
+    height: 29px;
+    background-color: #F9F9F9;
+    border-radius: 30px;
+    border: none;
+    font-size: 12px;
+    line-height: 11px;
+    background-repeat: no-repeat;
+    background-position: center;
+    color: #000;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.06);
+    align-self: center;
+}
 
 .movies-card__save-btn {
     background-image: url(../../images/save6d.png);
