--- a/src/components/InfoBox/InfoBox.css
+++ b/src/components/InfoBox/InfoBox.css
@@ -66,7 +66,7 @@
     display: block;
 }
 
-.popup__figcaption {
+.popup__text {
     font-weight: normal;
     font-size: 12px;
     line-height: 15px;
@@ -74,7 +74,7 @@
     margin-top: 10px;
 }
 
-.popup__figcaption_type_infoTool {
+.popup__text_type_infoTool {
     font-weight: 900;
     font-size: 24px;
     line-height: 29px;
@@ -99,7 +99,7 @@
         right: 0;
     }
 
-    .popup__figcaption_type_infoTool {
+    .popup__text_type_infoTool {
         font-size: 20px;
         line-height: 24px;
     }
